Minimum HTML and styles

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,3 +1,4 @@
-<footer class="page__footer">
-  <small></small>
+<footer class="footer">
+  <p>Sometimes the rigth path is no the easiest one.</p>
+  <small> &copy; Adalab 2023</small>
 </footer>
