--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,1 +1,4 @@
-<main class="page__main"></main>
+<main class="main">
+  <include src="./main_hero.html"></include>
+  <include src="./main_main.html"></include>
+</main>
