--- a/src/html/partials/main_main.html
+++ b/src/html/partials/main_main.html
@@ -1,3 +1,4 @@
 <section class="content">
-  <h1>Characters</h1>
+  <h1 class="content__title">Characters</h1>
+  <ul class="content__list js_character_list"></ul>
 </section>
