--- a/src/scss/layout/_main_main.scss
+++ b/src/scss/layout/_main_main.scss
@@ -1,3 +1,39 @@
 .content {
-    // height: 70%;
+    margin: 10px;
+    &__title {
+        margin: 10px auto;
+        text-align: center;
+    }
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 5px;
+        justify-content: center;
+    }
 }
+.card {
+    width: 20%;
+    border: 1px solid red;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    padding: 5px;
+    &__img {
+        width: 95%;
+        border: 1px solid;
+        text-align: center;
+        height: 80%;
+    }
+    &__text {
+        width: 95%;
+        border: 1px solid;
+        height: 15%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
