--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,4 +4,5 @@
 @import 'layout/header';
 @import 'layout/footer';
 @import 'pages/index';
-@import 'layout/main_hero'
+@import 'layout/main_hero';
+@import 'layout/main_main';
