Get characters id

--- a/src/scss/layout/_main_main.scss
+++ b/src/scss/layout/_main_main.scss
@@ -21,6 +21,7 @@
     justify-content: center;
     gap: 5px;
     padding: 5px;
+    cursor: pointer;
     &__img {
         width: 95%;
         border: 1px solid;
