--- a/src/html/partials/main_main.html
+++ b/src/html/partials/main_main.html
@@ -1,4 +1,8 @@
 <section class="content">
-  <h1 class="content__title">Characters</h1>
+  <h2 class="content__title">Characters</h2>
   <ul class="content__list js_character_list"></ul>
+  <section>
+    <h2>Favoritos</h2>
+  </section>
+  <ul class="content__list js_character_fav"></ul>
 </section>
