Create favourites list, change styles when clicked and added to it, make favourites section dissapear when there ir no favourites item selected. Save favourites list in Local Storage

--- a/src/html/partials/main_main.html
+++ b/src/html/partials/main_main.html
@@ -1,8 +1,8 @@
-<section class="content">
-  <h2 class="content__title">Characters</h2>
-  <ul class="content__list js_character_list"></ul>
-  <section>
-    <h2>Favoritos</h2>
-  </section>
-  <ul class="content__list js_character_fav"></ul>
+<section class="mainContent">
+  <article class="favouriteList"></article>
+
+  <article class="content">
+    <h2 class="content__title">Characters</h2>
+    <ul class="content__list js_character_list"></ul>
+  </article>
 </section>
