--- a/src/scss/layout/_main_main.scss
+++ b/src/scss/layout/_main_main.scss
@@ -1,3 +1,23 @@
+.mainContent {
+    display: flex;
+    width: 100vw;
+}
+
+.favouriteList {
+    margin: 10px;
+        &__title {
+            margin: 10px auto;
+            text-align: center;
+        }
+                   &__list {
+                    width: 100%;
+                       display: flex;
+                       flex-wrap: wrap;
+                       gap: 5px;
+                       justify-content: center;
+                   }
+}
+
 .content {
     margin: 10px;
     &__title {
@@ -9,10 +29,12 @@
         flex-wrap: wrap;
         gap: 5px;
         justify-content: center;
+
     }
 }
 .card {
     width: 20%;
+    max-width: 200px;
     border: 1px solid red;
     height: 250px;
     display: flex;
@@ -36,5 +58,19 @@
         justify-content: center;
         align-items: center;
     }
+}
+
+.cardDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.favourite {
+    background-color: cadetblue;
+    color: darkslateblue;
 }
 
