Create branch pagination and try new function. Not merged yetstatus

--- a/src/html/partials/main_hero.html
+++ b/src/html/partials/main_hero.html
@@ -1,6 +1,10 @@
 <section class="hero">
-  <form action="#" class="hero__form">
-    <input type="text" placeholder="Example: Olu Mel" />
-    <input type="submit" value="Search" />
+  <form class="hero__form">
+    <input
+      type="text"
+      placeholder="Example: Olu Mel"
+      class="hero__form--input js_search_input"
+    />
+    <input type="submit" value="Search" class="hero__form--btn js_search_btn" />
   </form>
 </section>
