Commit to change branch

--- a/src/html/partials/main_main.html
+++ b/src/html/partials/main_main.html
@@ -1,5 +1,7 @@
 <section class="mainContent">
-  <article class="favouriteList"></article>
+  <article class="favouriteList">
+    <h2 class="favouriteList__title">Favoritos</h2>
+  </article>
 
   <article class="content">
     <h2 class="content__title">Characters</h2>
