--- a/src/scss/layout/_main_main.scss
+++ b/src/scss/layout/_main_main.scss
@@ -74,3 +74,9 @@
     color: darkslateblue;
 }
 
+.deleteBtn {
+    background-color: red;
+    color: white;
+    padding: 5px;
+    border-radius: 50px;
+}
