--- a/src/html/partials/main_main.html
+++ b/src/html/partials/main_main.html
@@ -1,5 +1,8 @@
 <section class="mainContent">
-  <article class="favouriteList"></article>
+  <article class="favouriteList">
+    <h2 class="favouriteList__title">Favoritos</h2>
+    <ul class="content__list js_character_fav"></ul>
+  </article>
 
   <article class="content">
     <h2 class="content__title">Characters</h2>
