Set hero image, form and favs style

--- a/src/html/partials/main_main.html
+++ b/src/html/partials/main_main.html
@@ -1,7 +1,7 @@
 <section class="mainContent">
   <article class="favouriteList">
     <h2 class="favouriteList__title">Favoritos</h2>
-    <ul class="content__list js_character_fav"></ul>
+    <ul class="favouriteList__list js_character_fav"></ul>
   </article>
 
   <article class="content">
