--- a/src/scss/layout/_main_main.scss
+++ b/src/scss/layout/_main_main.scss
@@ -1,16 +1,29 @@
 .mainContent {
     display: flex;
-    width: 100vw;
+    flex-direction: column;
+    // width: 90vw;
+    align-items: center;
+    font-family: 'Montserrat Alternates', sans-serif;
+    padding-top: 5%;
+    padding-bottom: 10%;
+    background-color: rgb(31, 46, 89);
+    background: linear-gradient(teal, black);
 }
 
 .favouriteList {
-    margin: 10px;
+    border: 5px solid lightcyan;
+    border-radius: 10px;
+    padding: 5px;
+    color: lightcyan;
+    font-weight: 600;
+    min-height: 200px;
+    width: 90%;
         &__title {
-            margin: 10px auto;
+            // margin: 10px auto;
             text-align: center;
         }
                    &__list {
-                    width: 100%;
+                    // width: 100%;
                        display: flex;
                        flex-wrap: wrap;
                        gap: 5px;
@@ -19,9 +32,12 @@
 }
 
 .content {
-    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // margin: 10px;
     &__title {
-        margin: 10px auto;
+        // margin: 10px auto;
         text-align: center;
     }
     &__list {
@@ -29,14 +45,14 @@
         flex-wrap: wrap;
         gap: 5px;
         justify-content: center;
-
+        
     }
 }
 .card {
     width: 20%;
-    max-width: 200px;
+    // max-width: 200px;
     border: 1px solid red;
-    height: 250px;
+    // height: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -70,8 +86,13 @@
 }
 
 .favourite {
+    display: flex;
+    flex-wrap: wrap;
     background-color: cadetblue;
     color: darkslateblue;
+    height: 180px;
+    width: 100px;
+    
 }
 
 .hidden {
