Set content styles

--- a/src/html/partials/main_main.html
+++ b/src/html/partials/main_main.html
@@ -1,6 +1,6 @@
 <section class="mainContent">
   <article class="favouriteList">
-    <h2 class="favouriteList__title">Favoritos</h2>
+    <h2 class="favouriteList__title">Tus favoritos:</h2>
     <ul class="favouriteList__list js_character_fav"></ul>
   </article>
 
