--- a/src/scss/layout/_main_hero.scss
+++ b/src/scss/layout/_main_hero.scss
@@ -12,11 +12,19 @@
         position: absolute;
         top: 38.5%;
         transform: scale(1.3);
+        gap: 5px;
         &--input {
             font-family: 'Montserrat Alternates', sans-serif;
+            border-radius: 5px;
+            border: none;
         }
-    }
-    &__form--btn {
+        &--btn {
         font-family: 'Montserrat Alternates', sans-serif;
+        color: teal;
+        background-color: lightcyan;
+        border: none;
+        border-radius: 5px;
+        font-weight: 600;
+        }
     }
 }
