Set footer style and add font-size to the titles

--- a/src/html/partials/main_main.html
+++ b/src/html/partials/main_main.html
@@ -5,7 +5,7 @@
   </article>
 
   <article class="content">
-    <h2 class="content__title">Characters</h2>
+    <h2 class="content__title">Personajes:</h2>
     <ul class="content__list js_character_list"></ul>
   </article>
 </section>
