--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
-    background-color: blue;
-    color: white;
+    background-color: lightcyan;
+    color: teal;
     display: flex;
     justify-content: center;
     gap: 5px;
