--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,1 +1,12 @@
+//Colores: 
 
+$colorPrimary: lightcyan;
+$colorSecondary: darkslategray;
+$colorDelete: crimson; 
+$colorBgDelete: rgb(249, 203, 203);
+$colorFavorite: teal; 
+
+//Fuentes: 
+
+$fontPrimary: 'Montserrat Alternates',
+sans-serif;
