--- a/src/scss/layout/_main_hero.scss
+++ b/src/scss/layout/_main_hero.scss
@@ -14,14 +14,14 @@
         transform: scale(1.3);
         gap: 5px;
         &--input {
-            font-family: 'Montserrat Alternates', sans-serif;
+            font-family: $fontPrimary;
             border-radius: 5px;
             border: none;
         }
         &--btn {
-        font-family: 'Montserrat Alternates', sans-serif;
-        color: teal;
-        background-color: lightcyan;
+        font-family: $fontPrimary;
+        color: $colorFavorite;
+        background-color: $colorPrimary;
         border: none;
         border-radius: 5px;
         font-weight: 600;
