--- a/src/scss/layout/_main_main.scss
+++ b/src/scss/layout/_main_main.scss
@@ -2,28 +2,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Montserrat Alternates', sans-serif;
+    font-family: $fontPrimary;
     padding-top: 5%;
     padding-bottom: 10%;
-    background-color: rgb(31, 46, 89);
     background: linear-gradient(teal, black);
 }
 
 .favouriteList {
     display: flex;
     flex-direction: column;
-    // justify-content: center;
     align-items: center;
-    border: 5px solid lightcyan;
+    border: 5px solid $colorPrimary;
     border-radius: 10px;
     padding: 5px;
-    color: lightcyan;
+    color: $colorPrimary;
     font-weight: 600;
     min-height: 200px;
     width: 90%;
         &__title {
             text-align: center;
-            text-shadow: darkslategray 0 -2px;
+            text-shadow: $colorSecondary 0 -2px;
             padding: 5px;
             font-size: 2rem;
         }
@@ -35,8 +33,8 @@
        }
         &__delBtn {
             font-family: 'Montserrat Alternates', sans-serif;
-            color: crimson;
-            background-color: rgb(249, 203, 203);
+            color: $colorDelete;
+            background-color: $colorBgDelete;
             border: none;
             border-radius: 5px;
             font-weight: 600;
@@ -51,17 +49,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 5px solid lightcyan;
+    border: 5px solid $colorPrimary;
         border-radius: 10px;
         padding: 5px;
-        color: lightcyan;
+        color: $colorPrimary;
         font-weight: 600;
         width: 90%;
         margin-top: 3%;
     &__title {
         text-align: center;
         padding: 10px;
-        text-shadow: darkslategray 0 -2px;
+        text-shadow: $colorSecondary 0 -2px;
         font-size: 2rem;
     }
     &__list {
@@ -72,7 +70,7 @@
     }
 }
 .card {
-    border: 1px solid lightcyan;
+    border: 1px solid $colorPrimary;
     border-radius: 5px;
     min-height: 150px;
     display: flex;
@@ -108,8 +106,8 @@
 .favourite {
     display: flex;
     flex-wrap: wrap;
-    background-color: white;
-    color: darkslategray;
+    background-color: $colorPrimary;
+    color: $colorSecondary;
     height: 180px;
     width: 100px;
     border: none;
@@ -119,7 +117,7 @@
 .deleteX {
     display: flex;
     align-self: flex-end;
-    color: red;
+    color: $colorDelete;
 }
 
 .hidden {
